stitch/tests/snapshots/expressions__config_map_with_string_keys.snap
---
source: stitch/tests/expressions.rs
expression: "p(r#\"[\"host\": \"localhost\", \"retries\": 3]\"#)"
---
Map(
    [
        (
            Str(
                [
                    Lit(
                        "host",
                    ),
                ],
            ),
            Str(
                [
                    Lit(
                        "localhost",
                    ),
                ],
            ),
        ),
        (
            Str(
                [
                    Lit(
                        "retries",
                    ),
                ],
            ),
            Int(
                3,
            ),
        ),
    ],
)
