stitch/tests/snapshots/expressions__interpolated_message.snap
---
source: stitch/tests/expressions.rs
expression: "p(r#\"\"sensor {name}: {celsius}C\"\"#)"
---
Str(
    [
        Lit(
            "sensor ",
        ),
        Interp(
            Var(
                "name",
            ),
        ),
        Lit(
            ": ",
        ),
        Interp(
            Var(
                "celsius",
            ),
        ),
        Lit(
            "C",
        ),
    ],
)
