stitch/tests/snapshots/expressions__range_fold.snap
---
source: stitch/tests/expressions.rs
expression: "p(\"0 .. count |> map(square) |> fold(0, add)\")"
---
Binary {
    op: Pipe,
    left: Binary {
        op: Pipe,
        left: Range {
            start: Some(
                Int(
                    0,
                ),
            ),
            end: Some(
                Var(
                    "count",
                ),
            ),
            inclusive: false,
        },
        right: Call {
            callee: Var(
                "map",
            ),
            args: [
                Arg {
                    label: None,
                    value: Var(
                        "square",
                    ),
                },
            ],
        },
    },
    right: Call {
        callee: Var(
            "fold",
        ),
        args: [
            Arg {
                label: None,
                value: Int(
                    0,
                ),
            },
            Arg {
                label: None,
                value: Var(
                    "add",
                ),
            },
        ],
    },
}
